Add Sidebar and Search Box

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -80,7 +80,7 @@ footer{
   padding: 0.50rem;
 }
 
-.btn_primary{
+.btn_primary,.outline-primary{
   background-color: #FDCC0D;
   color: black;
 }
@@ -101,4 +101,27 @@ footer{
 .checkout-steps > div.active {
   border-bottom: 0.2rem solid #f08000;
   color: #f08000;
+}
+
+/* sidebar */
+.navbar-brand {
+  font-weight: bold;
+}
+.side-navbar {
+  width: 240px;
+  height: 100%;
+  position: absolute;
+  left: -300px;
+  background-color: #100901;
+  transition: 0.5s;
+}
+
+.site-container {
+  transition: 0.4s;
+}
+.active-cont {
+  margin-left: 240px;
+}
+.active-nav {
+  left: 0;
 }
